Modificato rpoblema id concetto sul map dei prodotti scontati